add: remind by voice

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@nextcloud/vue": "^3.10.1",
 		"@nextcloud/vue-dashboard": "^2.0.1",
 		"autosize": "^5.0.0",
+		"aws-sdk": "^2.1386.0",
 		"calendar-js": "github:nextcloud/calendar-js",
 		"cdav-library": "git+https://github.com/nextcloud/cdav-library.git",
 		"closest-css-color": "^1.0.0",
@@ -95,6 +96,7 @@
 		"babel-jest": "^27.0.5",
 		"babel-loader": "^8.2.2",
 		"css-loader": "^3.6.0",
+		"dotenv": "^16.0.3",
 		"eslint": "^5.16.0",
 		"eslint-config-standard": "^12.0.0",
 		"eslint-friendly-formatter": "^4.0.1",
